# matrix-whisper-bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
